Show hide sliders

--- a/jspsych_dev_test.html
+++ b/jspsych_dev_test.html
@@ -43,10 +43,13 @@
       noise: 127,
       move: 127,
       smooth: 127,
-      // gui_show:true,
-      // complexity_show:false,
-      // smooth_show:false,
-      // colour_hid:false,
+      gui_show:true,
+      gui_hide_spike:false,
+      gui_hide_complexity:false,
+      gui_hide_noise:false,
+      gui_hide_smooth:false,
+      gui_hide_move:false,                    
+      gui_hide_color:false,                              
       preamble: `<img src="./img/boubakiki.png" style="width:400px;"></img>`,
       questions: [
         {prompt: 'Test Question ',placeholder: 'Test Placeholder?',rows:5, columns: 50, name:'test name'}
