Show and hide circumplex

--- a/jspsych_dev_test.html
+++ b/jspsych_dev_test.html
@@ -44,12 +44,12 @@
       move: 127,
       smooth: 127,
       gui_show:true,
-      gui_hide_spike:false,
-      gui_hide_complexity:false,
-      gui_hide_noise:false,
-      gui_hide_smooth:false,
-      gui_hide_move:false,                    
-      gui_hide_color:false,                              
+      gui_hide_spike:true,
+      gui_hide_complexity:true,
+      gui_hide_noise:true,
+      gui_hide_smooth:true,
+      gui_hide_move:true,                    
+      gui_hide_color:true,                              
       preamble: `<img src="./img/boubakiki.png" style="width:400px;"></img>`,
       questions: [
         {prompt: 'Test Question ',placeholder: 'Test Placeholder?',rows:5, columns: 50, name:'test name'}
