--- a/jspsych_dev_test.html
+++ b/jspsych_dev_test.html
@@ -49,10 +49,11 @@
       gui_hide_noise:true,
       gui_hide_smooth:true,
       gui_hide_move:true,                    
-      gui_hide_color:true,                              
-      preamble: `<img src="./img/boubakiki.png" style="width:400px;"></img>`,
+      gui_hide_color:true,   
+      circClick_required: true,                           
+      preamble: 'Look at the sprite below. How does it make you feel. Mark your feeling on the graph below, then click continue.',
       questions: [
-        {prompt: 'Test Question ',placeholder: 'Test Placeholder?',rows:5, columns: 50, name:'test name'}
+        // {prompt: 'Test Question ',placeholder: 'Test Placeholder?',rows:5, columns: 50, name:'test name'}
       ]
     }
     timeline1.push(bkk_survey);
