bug: move speed increases over tirals
trying to fix this. not succeeding

--- a/jspsych_exp_test.html
+++ b/jspsych_exp_test.html
@@ -35,7 +35,7 @@
     };
     timeline.push(intro);
 
-    var bkk_preamble = 'Look at the sprite below. How does it make you feel. Mark your feeling on the graph below, then click continue.'
+    var bkk_preamble = 'Look at the image below. How does it make you feel? Mark your feeling on the graph below, then click continue.'
 
     var bkk_stimulus = { type: jsPsychBKKSurveyText, 
       bkkColor:'#D9D9D9', 
@@ -45,7 +45,7 @@
       move: jsPsych.timelineVariable('move'), 
       smooth: jsPsych.timelineVariable('smooth'), 
       draw_eyes: jsPsych.timelineVariable('eyes'),
-      gui_show:false, circClick_required: true, 
+      gui_show:true, circClick_required: false, 
       preamble: bkk_preamble, 
       min_duration: 1,
       questions: []
@@ -54,134 +54,70 @@
     var bkk_sequence = {
     timeline: [bkk_stimulus],
     timeline_variables: [
-        {complexity: 79, move: 0, smooth: 24, eyes: false},
-        {complexity: 79, move: 0, smooth: 24, eyes: true},
-        {complexity: 79, move: 83, smooth: 24, eyes: false},
-        {complexity: 79, move: 83, smooth: 24, eyes: true},
-        {complexity: 79, move: 166, smooth: 24, eyes: false},
-        {complexity: 79, move: 166, smooth: 24, eyes: true},
-        {complexity: 79, move: 250, smooth: 24, eyes: false},
-        {complexity: 79, move: 250, smooth: 24, eyes: true},
-        {complexity: 125, move: 0, smooth: 24, eyes: false},
-        {complexity: 125, move: 0, smooth: 24, eyes: true},
-        {complexity: 125, move: 83, smooth: 24, eyes: false},
-        {complexity: 125, move: 83, smooth: 24, eyes: true},
-        {complexity: 125, move: 166, smooth: 24, eyes: false},
-        {complexity: 125, move: 166, smooth: 24, eyes: true},
-        {complexity: 125, move: 250, smooth: 24, eyes: false},
-        {complexity: 125, move: 250, smooth: 24, eyes: true},
-        {complexity: 168, move: 0, smooth: 24, eyes: false},
-        {complexity: 168, move: 0, smooth: 24, eyes: true},
-        {complexity: 168, move: 83, smooth: 24, eyes: false},
-        {complexity: 168, move: 83, smooth: 24, eyes: true},
-        {complexity: 168, move: 166, smooth: 24, eyes: false},
-        {complexity: 168, move: 166, smooth: 24, eyes: true},
-        {complexity: 168, move: 250, smooth: 24, eyes: false},
-        {complexity: 168, move: 250, smooth: 24, eyes: true},
-        {complexity: 225, move: 0, smooth: 24, eyes: false},
-        {complexity: 225, move: 0, smooth: 24, eyes: true},
-        {complexity: 225, move: 83, smooth: 24, eyes: false},
-        {complexity: 225, move: 83, smooth: 24, eyes: true},
-        {complexity: 225, move: 166, smooth: 24, eyes: false},
-        {complexity: 225, move: 166, smooth: 24, eyes: true},
-        {complexity: 225, move: 250, smooth: 24, eyes: false},
-        {complexity: 225, move: 250, smooth: 24, eyes: true},
-        {complexity: 79, move: 0, smooth: 99, eyes: false},
-        {complexity: 79, move: 0, smooth: 99, eyes: true},
-        {complexity: 79, move: 83, smooth: 99, eyes: false},
-        {complexity: 79, move: 83, smooth: 99, eyes: true},
-        {complexity: 79, move: 166, smooth: 99, eyes: false},
-        {complexity: 79, move: 166, smooth: 99, eyes: true},
-        {complexity: 79, move: 250, smooth: 99, eyes: false},
-        {complexity: 79, move: 250, smooth: 99, eyes: true},
-        {complexity: 125, move: 0, smooth: 99, eyes: false},
-        {complexity: 125, move: 0, smooth: 99, eyes: true},
-        {complexity: 125, move: 83, smooth: 99, eyes: false},
-        {complexity: 125, move: 83, smooth: 99, eyes: true},
-        {complexity: 125, move: 166, smooth: 99, eyes: false},
-        {complexity: 125, move: 166, smooth: 99, eyes: true},
-        {complexity: 125, move: 250, smooth: 99, eyes: false},
-        {complexity: 125, move: 250, smooth: 99, eyes: true},
-        {complexity: 168, move: 0, smooth: 99, eyes: false},
-        {complexity: 168, move: 0, smooth: 99, eyes: true},
-        {complexity: 168, move: 83, smooth: 99, eyes: false},
-        {complexity: 168, move: 83, smooth: 99, eyes: true},
-        {complexity: 168, move: 166, smooth: 99, eyes: false},
-        {complexity: 168, move: 166, smooth: 99, eyes: true},
-        {complexity: 168, move: 250, smooth: 99, eyes: false},
-        {complexity: 168, move: 250, smooth: 99, eyes: true},
-        {complexity: 225, move: 0, smooth: 99, eyes: false},
-        {complexity: 225, move: 0, smooth: 99, eyes: true},
-        {complexity: 225, move: 83, smooth: 99, eyes: false},
-        {complexity: 225, move: 83, smooth: 99, eyes: true},
-        {complexity: 225, move: 166, smooth: 99, eyes: false},
-        {complexity: 225, move: 166, smooth: 99, eyes: true},
-        {complexity: 225, move: 250, smooth: 99, eyes: false},
-        {complexity: 225, move: 250, smooth: 99, eyes: true},
-        {complexity: 79, move: 0, smooth: 175, eyes: false},
-        {complexity: 79, move: 0, smooth: 175, eyes: true},
-        {complexity: 79, move: 83, smooth: 175, eyes: false},
-        {complexity: 79, move: 83, smooth: 175, eyes: true},
-        {complexity: 79, move: 166, smooth: 175, eyes: false},
-        {complexity: 79, move: 166, smooth: 175, eyes: true},
-        {complexity: 79, move: 250, smooth: 175, eyes: false},
-        {complexity: 79, move: 250, smooth: 175, eyes: true},
-        {complexity: 125, move: 0, smooth: 175, eyes: false},
-        {complexity: 125, move: 0, smooth: 175, eyes: true},
-        {complexity: 125, move: 83, smooth: 175, eyes: false},
-        {complexity: 125, move: 83, smooth: 175, eyes: true},
-        {complexity: 125, move: 166, smooth: 175, eyes: false},
-        {complexity: 125, move: 166, smooth: 175, eyes: true},
-        {complexity: 125, move: 250, smooth: 175, eyes: false},
-        {complexity: 125, move: 250, smooth: 175, eyes: true},
-        {complexity: 168, move: 0, smooth: 175, eyes: false},
-        {complexity: 168, move: 0, smooth: 175, eyes: true},
-        {complexity: 168, move: 83, smooth: 175, eyes: false},
-        {complexity: 168, move: 83, smooth: 175, eyes: true},
-        {complexity: 168, move: 166, smooth: 175, eyes: false},
-        {complexity: 168, move: 166, smooth: 175, eyes: true},
-        {complexity: 168, move: 250, smooth: 175, eyes: false},
-        {complexity: 168, move: 250, smooth: 175, eyes: true},
-        {complexity: 225, move: 0, smooth: 175, eyes: false},
-        {complexity: 225, move: 0, smooth: 175, eyes: true},
-        {complexity: 225, move: 83, smooth: 175, eyes: false},
-        {complexity: 225, move: 83, smooth: 175, eyes: true},
-        {complexity: 225, move: 166, smooth: 175, eyes: false},
-        {complexity: 225, move: 166, smooth: 175, eyes: true},
-        {complexity: 225, move: 250, smooth: 175, eyes: false},
-        {complexity: 225, move: 250, smooth: 175, eyes: true},
-        {complexity: 79, move: 0, smooth: 250, eyes: false},
-        {complexity: 79, move: 0, smooth: 250, eyes: true},
-        {complexity: 79, move: 83, smooth: 250, eyes: false},
-        {complexity: 79, move: 83, smooth: 250, eyes: true},
-        {complexity: 79, move: 166, smooth: 250, eyes: false},
-        {complexity: 79, move: 166, smooth: 250, eyes: true},
-        {complexity: 79, move: 250, smooth: 250, eyes: false},
-        {complexity: 79, move: 250, smooth: 250, eyes: true},
-        {complexity: 125, move: 0, smooth: 250, eyes: false},
-        {complexity: 125, move: 0, smooth: 250, eyes: true},
-        {complexity: 125, move: 83, smooth: 250, eyes: false},
-        {complexity: 125, move: 83, smooth: 250, eyes: true},
-        {complexity: 125, move: 166, smooth: 250, eyes: false},
-        {complexity: 125, move: 166, smooth: 250, eyes: true},
-        {complexity: 125, move: 250, smooth: 250, eyes: false},
-        {complexity: 125, move: 250, smooth: 250, eyes: true},
-        {complexity: 168, move: 0, smooth: 250, eyes: false},
-        {complexity: 168, move: 0, smooth: 250, eyes: true},
-        {complexity: 168, move: 83, smooth: 250, eyes: false},
-        {complexity: 168, move: 83, smooth: 250, eyes: true},
-        {complexity: 168, move: 166, smooth: 250, eyes: false},
-        {complexity: 168, move: 166, smooth: 250, eyes: true},
-        {complexity: 168, move: 250, smooth: 250, eyes: false},
-        {complexity: 168, move: 250, smooth: 250, eyes: true},
-        {complexity: 225, move: 0, smooth: 250, eyes: false},
-        {complexity: 225, move: 0, smooth: 250, eyes: true},
-        {complexity: 225, move: 83, smooth: 250, eyes: false},
-        {complexity: 225, move: 83, smooth: 250, eyes: true},
-        {complexity: 225, move: 166, smooth: 250, eyes: false},
-        {complexity: 225, move: 166, smooth: 250, eyes: true},
-        {complexity: 225, move: 250, smooth: 250, eyes: false},
-        {complexity: 225, move: 250, smooth: 250, eyes: true}
+      {complexity: 79, move: 0, smooth: 24, eyes: false},
+      {complexity: 79, move: 83, smooth: 24, eyes: false},
+      {complexity: 79, move: 166, smooth: 24, eyes: false},
+      {complexity: 79, move: 250, smooth: 24, eyes: false},
+      {complexity: 125, move: 0, smooth: 24, eyes: false},
+      {complexity: 125, move: 83, smooth: 24, eyes: false},
+      {complexity: 125, move: 166, smooth: 24, eyes: false},
+      {complexity: 125, move: 250, smooth: 24, eyes: false},
+      {complexity: 168, move: 0, smooth: 24, eyes: false},
+      {complexity: 168, move: 83, smooth: 24, eyes: false},
+      {complexity: 168, move: 166, smooth: 24, eyes: false},
+      {complexity: 168, move: 250, smooth: 24, eyes: false},
+      {complexity: 225, move: 0, smooth: 24, eyes: false},
+      {complexity: 225, move: 83, smooth: 24, eyes: false},
+      {complexity: 225, move: 166, smooth: 24, eyes: false},
+      {complexity: 225, move: 250, smooth: 24, eyes: false},
+      {complexity: 79, move: 0, smooth: 99, eyes: false},
+      {complexity: 79, move: 83, smooth: 99, eyes: false},
+      {complexity: 79, move: 166, smooth: 99, eyes: false},
+      {complexity: 79, move: 250, smooth: 99, eyes: false},
+      {complexity: 125, move: 0, smooth: 99, eyes: false},
+      {complexity: 125, move: 83, smooth: 99, eyes: false},
+      {complexity: 125, move: 166, smooth: 99, eyes: false},
+      {complexity: 125, move: 250, smooth: 99, eyes: false},
+      {complexity: 168, move: 0, smooth: 99, eyes: false},
+      {complexity: 168, move: 83, smooth: 99, eyes: false},
+      {complexity: 168, move: 166, smooth: 99, eyes: false},
+      {complexity: 168, move: 250, smooth: 99, eyes: false},
+      {complexity: 225, move: 0, smooth: 99, eyes: false},
+      {complexity: 225, move: 83, smooth: 99, eyes: false},
+      {complexity: 225, move: 166, smooth: 99, eyes: false},
+      {complexity: 225, move: 250, smooth: 99, eyes: false},
+      {complexity: 79, move: 0, smooth: 175, eyes: false},
+      {complexity: 79, move: 83, smooth: 175, eyes: false},
+      {complexity: 79, move: 166, smooth: 175, eyes: false},
+      {complexity: 79, move: 250, smooth: 175, eyes: false},
+      {complexity: 125, move: 0, smooth: 175, eyes: false},
+      {complexity: 125, move: 83, smooth: 175, eyes: false},
+      {complexity: 125, move: 166, smooth: 175, eyes: false},
+      {complexity: 125, move: 250, smooth: 175, eyes: false},
+      {complexity: 168, move: 0, smooth: 175, eyes: false},
+      {complexity: 168, move: 83, smooth: 175, eyes: false},
+      {complexity: 168, move: 166, smooth: 175, eyes: false},
+      {complexity: 168, move: 250, smooth: 175, eyes: false},
+      {complexity: 225, move: 0, smooth: 175, eyes: false},
+      {complexity: 225, move: 83, smooth: 175, eyes: false},
+      {complexity: 225, move: 166, smooth: 175, eyes: false},
+      {complexity: 225, move: 250, smooth: 175, eyes: false},
+      {complexity: 79, move: 0, smooth: 250, eyes: false},
+      {complexity: 79, move: 83, smooth: 250, eyes: false},
+      {complexity: 79, move: 166, smooth: 250, eyes: false},
+      {complexity: 79, move: 250, smooth: 250, eyes: false},
+      {complexity: 125, move: 0, smooth: 250, eyes: false},
+      {complexity: 125, move: 83, smooth: 250, eyes: false},
+      {complexity: 125, move: 166, smooth: 250, eyes: false},
+      {complexity: 125, move: 250, smooth: 250, eyes: false},
+      {complexity: 168, move: 0, smooth: 250, eyes: false},
+      {complexity: 168, move: 83, smooth: 250, eyes: false},
+      {complexity: 168, move: 166, smooth: 250, eyes: false},
+      {complexity: 168, move: 250, smooth: 250, eyes: false},
+      {complexity: 225, move: 0, smooth: 250, eyes: false},
+      {complexity: 225, move: 83, smooth: 250, eyes: false},
+      {complexity: 225, move: 166, smooth: 250, eyes: false},
+      {complexity: 225, move: 250, smooth: 250, eyes: false}
       ],
       randomize_order: true
     }
