--- a/jspsych_exp_test.html
+++ b/jspsych_exp_test.html
@@ -39,87 +39,73 @@
 
     var bkk_stimulus = { type: jsPsychBKKSurveyText, 
       bkkColor:'#D9D9D9', 
-      spike: 237, 
-      noise: 0, 
+      spike: jsPsych.timelineVariable('spike'),
       complexity: jsPsych.timelineVariable('complexity'), 
-      move: jsPsych.timelineVariable('move'), 
+      noise: jsPsych.timelineVariable('noise'), 
       smooth: jsPsych.timelineVariable('smooth'), 
       draw_eyes: jsPsych.timelineVariable('eyes'),
       gui_show:false, circClick_required: true, 
+      draw_eyes:false,
+      // draw_bkk: false,
       preamble: bkk_preamble, 
-      min_duration: 2000,
+      min_duration: 0,
       questions: []
     } 
 
     var bkk_sequence = {
     timeline: [bkk_stimulus],
-    timeline_variables: [                  
-      {complexity: 79, move: 0, smooth: 24, eyes: false},
-      {complexity: 79, move: 83, smooth: 24, eyes: false},
-      {complexity: 79, move: 166, smooth: 24, eyes: false},
-      {complexity: 79, move: 250, smooth: 24, eyes: false},
-      {complexity: 125, move: 0, smooth: 24, eyes: false},
-      {complexity: 125, move: 83, smooth: 24, eyes: false},
-      {complexity: 125, move: 166, smooth: 24, eyes: false},
-      {complexity: 125, move: 250, smooth: 24, eyes: false},
-      {complexity: 168, move: 0, smooth: 24, eyes: false},
-      {complexity: 168, move: 83, smooth: 24, eyes: false},
-      {complexity: 168, move: 166, smooth: 24, eyes: false},
-      {complexity: 168, move: 250, smooth: 24, eyes: false},
-      {complexity: 225, move: 0, smooth: 24, eyes: false},
-      {complexity: 225, move: 83, smooth: 24, eyes: false},
-      {complexity: 225, move: 166, smooth: 24, eyes: false},
-      {complexity: 225, move: 250, smooth: 24, eyes: false},
-      {complexity: 79, move: 0, smooth: 99, eyes: false},
-      {complexity: 79, move: 83, smooth: 99, eyes: false},
-      {complexity: 79, move: 166, smooth: 99, eyes: false},
-      {complexity: 79, move: 250, smooth: 99, eyes: false},
-      {complexity: 125, move: 0, smooth: 99, eyes: false},
-      {complexity: 125, move: 83, smooth: 99, eyes: false},
-      {complexity: 125, move: 166, smooth: 99, eyes: false},
-      {complexity: 125, move: 250, smooth: 99, eyes: false},
-      {complexity: 168, move: 0, smooth: 99, eyes: false},
-      {complexity: 168, move: 83, smooth: 99, eyes: false},
-      {complexity: 168, move: 166, smooth: 99, eyes: false},
-      {complexity: 168, move: 250, smooth: 99, eyes: false},
-      {complexity: 225, move: 0, smooth: 99, eyes: false},
-      {complexity: 225, move: 83, smooth: 99, eyes: false},
-      {complexity: 225, move: 166, smooth: 99, eyes: false},
-      {complexity: 225, move: 250, smooth: 99, eyes: false},
-      {complexity: 79, move: 0, smooth: 175, eyes: false},
-      {complexity: 79, move: 83, smooth: 175, eyes: false},
-      {complexity: 79, move: 166, smooth: 175, eyes: false},
-      {complexity: 79, move: 250, smooth: 175, eyes: false},
-      {complexity: 125, move: 0, smooth: 175, eyes: false},
-      {complexity: 125, move: 83, smooth: 175, eyes: false},
-      {complexity: 125, move: 166, smooth: 175, eyes: false},
-      {complexity: 125, move: 250, smooth: 175, eyes: false},
-      {complexity: 168, move: 0, smooth: 175, eyes: false},
-      {complexity: 168, move: 83, smooth: 175, eyes: false},
-      {complexity: 168, move: 166, smooth: 175, eyes: false},
-      {complexity: 168, move: 250, smooth: 175, eyes: false},
-      {complexity: 225, move: 0, smooth: 175, eyes: false},
-      {complexity: 225, move: 83, smooth: 175, eyes: false},
-      {complexity: 225, move: 166, smooth: 175, eyes: false},
-      {complexity: 225, move: 250, smooth: 175, eyes: false},
-      {complexity: 79, move: 0, smooth: 250, eyes: false},
-      {complexity: 79, move: 83, smooth: 250, eyes: false},
-      {complexity: 79, move: 166, smooth: 250, eyes: false},
-      {complexity: 79, move: 250, smooth: 250, eyes: false},
-      {complexity: 125, move: 0, smooth: 250, eyes: false},
-      {complexity: 125, move: 83, smooth: 250, eyes: false},
-      {complexity: 125, move: 166, smooth: 250, eyes: false},
-      {complexity: 125, move: 250, smooth: 250, eyes: false},
-      {complexity: 168, move: 0, smooth: 250, eyes: false},
-      {complexity: 168, move: 83, smooth: 250, eyes: false},
-      {complexity: 168, move: 166, smooth: 250, eyes: false},
-      {complexity: 168, move: 250, smooth: 250, eyes: false},
-      {complexity: 225, move: 0, smooth: 250, eyes: false},
-      {complexity: 225, move: 83, smooth: 250, eyes: false},
-      {complexity: 225, move: 166, smooth: 250, eyes: false},
-      {complexity: 225, move: 250, smooth: 250, eyes: false}
+    timeline_variables: [     
+ // complexity, smoothness, length 
+// {complexity: 79, noise: 0, smooth: 24, spike: 120},
+// {complexity: 79, noise: 0, smooth: 24, spike: 250},
+// {complexity: 200, noise: 0, smooth: 24, spike: 120},
+// {complexity: 200, noise: 0, smooth: 24, spike: 250},
+// {complexity: 250, noise: 0, smooth: 24, spike: 120},
+// {complexity: 250, noise: 0, smooth: 24, spike: 250},
+// {complexity: 79, noise: 0, smooth: 137, spike: 120},
+// {complexity: 79, noise: 0, smooth: 137, spike: 250},
+// {complexity: 200, noise: 0, smooth: 137, spike: 120},
+// {complexity: 200, noise: 0, smooth: 137, spike: 250},
+// {complexity: 250, noise: 0, smooth: 137, spike: 120},
+// {complexity: 250, noise: 0, smooth: 137, spike: 250},
+// {complexity: 79, noise: 0, smooth: 250, spike: 120},
+// {complexity: 79, noise: 0, smooth: 250, spike: 250},
+// {complexity: 200, noise: 0, smooth: 250, spike: 120},
+// {complexity: 200, noise: 0, smooth: 250, spike: 250},
+// {complexity: 250, noise: 0, smooth: 250, spike: 120},
+// {complexity: 250, noise: 0, smooth: 250, spike: 250},
+
+
+
+ // complexity, smoothness, noise, length
+
+{complexity: 79, noise: 0, smooth: 24, spike: 120},
+{complexity: 79, noise: 0, smooth: 24, spike: 250},
+{complexity: 79, noise: 150, smooth: 24, spike: 120},
+{complexity: 79, noise: 150, smooth: 24, spike: 250},
+{complexity: 225, noise: 0, smooth: 24, spike: 120},
+{complexity: 225, noise: 0, smooth: 24, spike: 250},
+{complexity: 225, noise: 150, smooth: 24, spike: 120},
+{complexity: 225, noise: 150, smooth: 24, spike: 250},
+{complexity: 79, noise: 0, smooth: 137, spike: 120},
+{complexity: 79, noise: 0, smooth: 137, spike: 250},
+{complexity: 79, noise: 150, smooth: 137, spike: 120},
+{complexity: 79, noise: 150, smooth: 137, spike: 250},
+{complexity: 225, noise: 0, smooth: 137, spike: 120},
+{complexity: 225, noise: 0, smooth: 137, spike: 250},
+{complexity: 225, noise: 150, smooth: 137, spike: 120},
+{complexity: 225, noise: 150, smooth: 137, spike: 250},
+{complexity: 79, noise: 0, smooth: 250, spike: 120},
+{complexity: 79, noise: 0, smooth: 250, spike: 250},
+{complexity: 79, noise: 150, smooth: 250, spike: 120},
+{complexity: 79, noise: 150, smooth: 250, spike: 250},
+{complexity: 225, noise: 0, smooth: 250, spike: 120},
+{complexity: 225, noise: 0, smooth: 250, spike: 250},
+{complexity: 225, noise: 150, smooth: 250, spike: 120},
+{complexity: 225, noise: 150, smooth: 250, spike: 250},
+
       ],
-      randomize_order: true
+      randomize_order: false
     }
 
     // timeline.push.apply(timeline, bkk_sequence);
