made template for experiment

--- a/jspsych_exp_test.html
+++ b/jspsych_exp_test.html
@@ -9,18 +9,34 @@
     <!-- Now the JsPsych specific stuff -->
     <script src="./js/jspsych/jspsych.js"></script>
     <script src="./js/jspsych/plugin-instructions.js"></script>    
+    <script src="./js/jspsych/plugin-html-button-response.js"></script>
+    <script src="./js/jspsych/plugin-survey-text.js"></script>
     <script src="./bkk-plugins/bkk-survey-text.js"></script>
+
+
     <link rel="stylesheet" href="./js/jspsych/jspsych.css"></link>
     <link rel="stylesheet" href="./bkk.css"></link>
 
+    <!-- OTHER FILES YOU MIGHT WANT TO EDIT -->
+    <script src="js/consent_etc.js"></script> <!-- defines the consent page and the demographic checks -->
 
 
   </head>
   <body></body>
   <script>
+    // Stops the user pressing "back" which would wipe all data
+      function preventNavBack(){
+        history.pushState(null, null, document.URL);
+        window.addEventListener('popstate', function () {
+            history.pushState(null, null, document.URL);
+            window.alert("the back button has been disabled for the duration of the experiment, as using the back button will break the experiment");
+        });
+      }
+      preventNavBack();
+
+
     var timeline=[];
-    var timeline1=[];
-    
+
     
     var jsPsych = initJsPsych({
       on_finish: function() {
@@ -28,89 +44,153 @@
       }
     });
 
-    var intro = {
-      type: jsPsychInstructions,
-      pages: ['<p>Welcome to the experiment.</p><br><p>Click next to begin.</p>',],
-      show_clickable_nav: true
-    };
-    timeline.push(intro);
 
-    var bkk_preamble = 'Look at the image below. How does it make you feel? Mark your feeling on the graph below, then click continue.'
+//  INTRODUCTION -----------------------------------------------------------------------------
+    // THESE PAGES ARE DEFINED IN CONSENT_ETC.JS
+    var infoBlock = {
+      timeline: [startPage, consent_page, demog_page],
+    }
+
+    //  COMMENT OUT THIS LINE FOR TESTING IF YOU WANT - IT WILL GET RID OF THE INTRO, CONSENT, and Demographics pages
+    // timeline.push(infoBlock)
+
+//  TRAINING  -----------------------------------------------------------------------------
+
+
+
+    var training1 = { type: jsPsychBKKSurveyText, 
+
+        preamble: '<p>In the experiment you will be shown various shapes and asked to record your emotional response to the shape.</p>' +
+                  '<p>To record your emotional response you will click on a graph like this. The top of the graph represents high energy feelings. The bottom of the graph represents low energy feelings. The left side represents negative feelings, and the right side represents positive feelings.</p>'+
+                  '<p>You can click anywhere on the graph if that represents your feelings. If the image you are shown represents a very energetic feeling for you, you should click right at the top of the graph. If it feels neither high energy nor low energy you can click somewhere close to the middle.</p>' +
+                  '<p>Blah blah blah, Feng can explain it better I think.</p>' +
+                  '<p>Click anywhere on the graph and then click submit to continue.</p>' +
+                  '<br>', 
+        // For testing you can turn this off so you don't need to click the cirucmplex each time
+        circClick_required: true, 
+        //  For testing set this to zero so you don't need to wait
+        min_duration: 1000,
+        circ_hide: false,
+        draw_bkk: false, // HIDING BKK FOR THESE INTRODUCITON TRIALS
+        gui_show:false, 
+        questions: []
+      } 
+      timeline.push(training1)
+
+    var training2 = { type: jsPsychBKKSurveyText, 
+
+        preamble: '<center><img src="./img/happy_excited.jpg"></img></center><p> This image is of someone happy and excited. These kinds of emotions belong in the top right corner of the graph. They are very high energy (top), and very positive (right). Click close to the top right corner of the graph, and then click submit.</p>', 
+        // For testing you can turn this off so you don't need to click the cirucmplex each time
+        circClick_required: true, 
+        //  For testing set this to zero so you don't need to wait
+        min_duration: 1000,
+        circ_hide: false,
+        draw_bkk: false, // HIDING BKK FOR THESE INTRODUCITON TRIALS
+        gui_show:false, 
+        questions: []
+      } 
+      timeline.push(training2)
+
+
+    var training3 = { type: jsPsychBKKSurveyText, 
+
+        preamble: '<center><img src="./img/sad.jpg"></img></center><p> This image is of someone very sad and low. These kinds of emotions belong in the bottom left corner of the graph. They are very low energy (top), and very negative (right). Click close to the bottom left corner of the graph, and then click submit.</p>', 
+        // For testing you can turn this off so you don't need to click the cirucmplex each time
+        circClick_required: true, 
+        //  For testing set this to zero so you don't need to wait
+        min_duration: 1000,
+        circ_hide: false,
+        draw_bkk: false, // HIDING BKK FOR THESE INTRODUCITON TRIALS
+        gui_show:false, 
+        questions: []
+      } 
+      timeline.push(training3)
+
+
+    var finishTraining = {
+        type: jsPsychHtmlButtonResponse,
+        stimulus: '<p>Great, you have completed the training section of the study. You will now begin the experiment.</p>'+
+                  '<p>You will be shown 24 different shapes. For each shape click on the graph to record the emotion you think it represents. There are no right answers BLAH BLAH BLAH</p>' +
+                  '<p>You will not be able to click onto the next shape until [10 seconds?] have passed. Please take at least this amount of time to reflect on each shape before recording the emotion you think it represents, and continuing.</p>' +
+                  '<br>', 
+        choices: ["continue"]
+    }
+    timeline.push(finishTraining)
+
+
+//  EXPERIMENT  -----------------------------------------------------------------------------
+
+
+
+//  BKK STIMULI 
+
+    //  SET THE EXPERIMENT VARIABLES HERE
+    //  Experiment Parameters (all are 0-255)
+    //  you can try out values for parameters using try_out_parameters.html
+    let roundVals = [24, 137, 250] // spikiness or roundness of the BKK
+    let countVals = [79, 225] // number of spikes
+    let noiseVals = [0, 150] // how regular is the BKK (higher = less regular)
+    let showEyesVals = [false] // false = hide eyes, true = show eyes
+    let lengthVals = [120, 250] // length of the protrusions
+
+
+    let BKK_stim_variables = []
+    for(let rnd of roundVals) {
+      for(let cnt of countVals){
+        for (let ns of noiseVals){
+          for (let ey of showEyesVals){
+            for (let lng of lengthVals){
+              console.log(ey)
+              let thisTrial = { eyes: ey, 
+                                complexity: cnt, 
+                                noise: ns,
+                                smooth: rnd,
+                                length: lng
+                              }
+              BKK_stim_variables.push(thisTrial)
+            }
+          }
+        }
+      }
+    }
+    console.log(BKK_stim_variables)
+
+
+    var bkk_instruction = 'Look at the image below. How does it make you feel? Mark your feeling on the graph below, then click continue.'
 
     var bkk_stimulus = { type: jsPsychBKKSurveyText, 
       bkkColor:'#D9D9D9', 
-      spike: jsPsych.timelineVariable('spike'),
+      spike: jsPsych.timelineVariable('length'),
       complexity: jsPsych.timelineVariable('complexity'), 
       noise: jsPsych.timelineVariable('noise'), 
       smooth: jsPsych.timelineVariable('smooth'), 
       draw_eyes: jsPsych.timelineVariable('eyes'),
-      gui_show:false, circClick_required: true, 
-      draw_eyes:false,
-      // draw_bkk: false,
-      preamble: bkk_preamble, 
-      min_duration: 0,
+      preamble: bkk_instruction, 
+
+      // For testing you can turn GUI on to try tweaking values
+      gui_show:false, 
+      // For testing you can turn this off so you don't need to click the cirucmplex each time
+      circClick_required: false, 
+      //  For testing set this to zero so you don't need to wait
+        min_duration: (10 * 1000), // Time is in milliseconds
+      circ_hide: false,
+      draw_bkk: true,
       questions: []
     } 
 
     var bkk_sequence = {
     timeline: [bkk_stimulus],
-    timeline_variables: [     
- // complexity, smoothness, length 
-// {complexity: 79, noise: 0, smooth: 24, spike: 120},
-// {complexity: 79, noise: 0, smooth: 24, spike: 250},
-// {complexity: 200, noise: 0, smooth: 24, spike: 120},
-// {complexity: 200, noise: 0, smooth: 24, spike: 250},
-// {complexity: 250, noise: 0, smooth: 24, spike: 120},
-// {complexity: 250, noise: 0, smooth: 24, spike: 250},
-// {complexity: 79, noise: 0, smooth: 137, spike: 120},
-// {complexity: 79, noise: 0, smooth: 137, spike: 250},
-// {complexity: 200, noise: 0, smooth: 137, spike: 120},
-// {complexity: 200, noise: 0, smooth: 137, spike: 250},
-// {complexity: 250, noise: 0, smooth: 137, spike: 120},
-// {complexity: 250, noise: 0, smooth: 137, spike: 250},
-// {complexity: 79, noise: 0, smooth: 250, spike: 120},
-// {complexity: 79, noise: 0, smooth: 250, spike: 250},
-// {complexity: 200, noise: 0, smooth: 250, spike: 120},
-// {complexity: 200, noise: 0, smooth: 250, spike: 250},
-// {complexity: 250, noise: 0, smooth: 250, spike: 120},
-// {complexity: 250, noise: 0, smooth: 250, spike: 250},
-
-
-
- // complexity, smoothness, noise, length
-
-{complexity: 79, noise: 0, smooth: 24, spike: 120},
-{complexity: 79, noise: 0, smooth: 24, spike: 250},
-{complexity: 79, noise: 150, smooth: 24, spike: 120},
-{complexity: 79, noise: 150, smooth: 24, spike: 250},
-{complexity: 225, noise: 0, smooth: 24, spike: 120},
-{complexity: 225, noise: 0, smooth: 24, spike: 250},
-{complexity: 225, noise: 150, smooth: 24, spike: 120},
-{complexity: 225, noise: 150, smooth: 24, spike: 250},
-{complexity: 79, noise: 0, smooth: 137, spike: 120},
-{complexity: 79, noise: 0, smooth: 137, spike: 250},
-{complexity: 79, noise: 150, smooth: 137, spike: 120},
-{complexity: 79, noise: 150, smooth: 137, spike: 250},
-{complexity: 225, noise: 0, smooth: 137, spike: 120},
-{complexity: 225, noise: 0, smooth: 137, spike: 250},
-{complexity: 225, noise: 150, smooth: 137, spike: 120},
-{complexity: 225, noise: 150, smooth: 137, spike: 250},
-{complexity: 79, noise: 0, smooth: 250, spike: 120},
-{complexity: 79, noise: 0, smooth: 250, spike: 250},
-{complexity: 79, noise: 150, smooth: 250, spike: 120},
-{complexity: 79, noise: 150, smooth: 250, spike: 250},
-{complexity: 225, noise: 0, smooth: 250, spike: 120},
-{complexity: 225, noise: 0, smooth: 250, spike: 250},
-{complexity: 225, noise: 150, smooth: 250, spike: 120},
-{complexity: 225, noise: 150, smooth: 250, spike: 250},
-
-      ],
-      randomize_order: false
+    randomize_order: true,
+    timeline_variables: BKK_stim_variables
     }
 
-    // timeline.push.apply(timeline, bkk_sequence);
-
     timeline.push(bkk_sequence);    
+
+//  END  -----------------------------------------------------------------------------
+
+    timeline.push(debrief_page)
+
+
     jsPsych.run(timeline);
 
 
