--- a/jspsych_exp_test.html
+++ b/jspsych_exp_test.html
@@ -54,11 +54,15 @@
     }
 
     //  COMMENT OUT THIS LINE FOR TESTING IF YOU WANT - IT WILL GET RID OF THE INTRO, CONSENT, and Demographics pages
-    timeline.push(infoBlock)
+    // timeline.push(infoBlock)
 
 
 
 //  TRAINING  -----------------------------------------------------------------------------
+
+
+    trainingTimeline = []
+
 
     var training1 = { type: jsPsychBKKSurveyText, 
 
@@ -77,7 +81,7 @@
         gui_show:false, 
         questions: []
       } 
-      timeline.push(training1)
+      trainingTimeline.push(training1)
 
 
 
@@ -93,7 +97,7 @@
         gui_show:false, 
         questions: []
       } 
-      timeline.push(training2)
+      trainingTimeline.push(training2)
 
 
 
@@ -110,7 +114,7 @@
         gui_show:false, 
         questions: []
       } 
-      timeline.push(training3)
+      trainingTimeline.push(training3)
 
 
 
@@ -129,10 +133,16 @@
                   '<br>', 
         choices: ["continue"]
     }
-    timeline.push(finishTraining)
+    trainingTimeline.push(finishTraining)
 
 
+    var trainingBlock = {
+      timeline: trainingTimeline,
+    }
 
+
+    //  Comment this if you are testing and don't want to see the training stuff
+    // timeline.push(trainingBlock);    
 
 //  EXPERIMENT  -----------------------------------------------------------------------------
 
