saving to gcloud datastore

--- a/try_out_parameters.html
+++ b/try_out_parameters.html
@@ -47,7 +47,7 @@
       circClick_required: false, 
       //  For testing set to zero so you don't need
       circ_hide: true,
-      draw_eyes:false,
+      draw_eyes:true,
       draw_bkk: true,
       min_duration: 0,
       questions: []
